# yolo_inference

./: CMakeLists.txt  README.md  package.xml  setup.py
yolo_inference/: __init__.py  yolo_inference_node.py
